--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 			<div class="divwrapper">
 				<canvas id="canv"></canvas>
 			</div>
+			<button type="button" onclick="saveFEN();">Save FEN</button>
 		</div>
 </body>
 
