--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
 			<div class="divwrapper">
 				<canvas id="canv"></canvas>
 			</div>
-			<button type="button" onclick="saveFEN();">Save FEN</button>
+			<button class="button" type="button" onclick="saveFEN();">Save FEN</button c>
+			<button class="button" type="button" onclick="loadFEN();">Refresh</button>
+			<button class="button" type="button" onclick="resetFEN();">RESET BOARD</button>
 		</div>
 </body>
 
