chaning button layout

--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 			<div class="divwrapper">
 				<canvas id="canv"></canvas>
 			</div>
-			<button class="button" type="button" onclick="saveFEN();">Save FEN</button c>
+			<button class="button" type="button" onclick="saveFEN();">Save Move</button c>
 			<button class="button" type="button" onclick="loadFEN();">Refresh</button>
-			<button class="button" type="button" onclick="resetFEN();">RESET BOARD</button>
 			<button class="button" type="button" onclick="switchView();">Switch View</button>
+			<button class="button" type="button" onclick="resetFEN();">RESET BOARD</button>
 		</div>
 </body>
 
