fixing a few things

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 			<button class="button" type="button" onclick="saveFEN();">Save Move</button c>
 			<button class="button" type="button" onclick="loadFEN();">Refresh</button>
 			<button class="button" type="button" onclick="switchView();">Switch View</button>
+			<button class="button" type="button" onclick="randMove();">Random Move</button>
 			<button class="button" type="button" onclick="resetFEN();">RESET BOARD</button>
 		</div>
 </body>
