--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<title>Chessboard</title>
 	<link rel="stylesheet" href="styles.css" type="text/css">
+	<link rel="icon" type="image/svg" href="favicon.svg" />
   <!-- <script type="text/javascript" src="main.js"></script> -->
   <script type="text/javascript" src="chessboard.js"></script>
 </head>
@@ -18,6 +19,10 @@
 			<button class="button" type="button" onclick="switchView();">Switch View</button>
 			<button class="button" type="button" onclick="randMove();">Random Move</button>
 			<button class="button" type="button" onclick="resetFEN();">RESET BOARD</button>
+			<form>
+				<input class="input" type="text" size="43" name="fen">
+				<button class="inputbutton" type="button" onclick="setFEN(fen.value);">Set FEN</button>
+			</form>
 		</div>
 </body>
 
