--- a/index.html
+++ b/index.html
@@ -13,11 +13,14 @@
 		<div id="wrapper">
 			<div class="divwrapper">
 				<canvas id="canv"></canvas>
+				<p>Side to move:</p>
+				<p class="tomove">white</p>
 			</div>
 			<button class="button" type="button" onclick="saveFEN();">Save Move</button c>
 			<button class="button" type="button" onclick="loadFEN();">Refresh</button>
 			<button class="button" type="button" onclick="switchView();">Switch View</button>
-			<button class="button" type="button" onclick="randMove();">Random Move</button>
+			<button class="button" type="button" onclick="switchSide();">Switch Side</button>
+			<button class="button" type="button" onclick="randMove();">Gen Move</button>
 			<button class="button" type="button" onclick="resetFEN();">RESET BOARD</button>
 			<form>
 				<input class="input" type="text" size="43" name="fen">
