--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<title>Chessboard</title>
 	<link rel="stylesheet" href="styles.css" type="text/css">
-	<link rel="icon" type="image/svg" href="favicon.svg" />
+	<link rel="icon" type="image/svg" href="/favicon.svg" />
   <!-- <script type="text/javascript" src="main.js"></script> -->
   <script type="text/javascript" src="chessboard.js"></script>
 </head>
