--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 				<input class="input" type="text" size="43" name="fen">
 				<button class="inputbutton" type="button" onclick="setFEN(fen.value);">Set FEN</button>
 			</form>
+			<p id="fen"></p>
 		</div>
 </body>
 
